--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -3,7 +3,7 @@
 // ***************************
 
 @import "normalize.css";
-@import 'antd/dist/antd.css';
+@import "antd/dist/antd.css";
 // @import "draft-js/dist/Draft.css";
 
 $bgColor1: var(--background-color);
@@ -43,7 +43,7 @@ body {
   min-height: 100vh;
   margin: 0;
   padding: 0;
-  background-color: gray;
+  background-color: #888;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
