Add transition to header, toolbar, btns, themes

--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -4,14 +4,13 @@
 
 @import "normalize.css";
 @import "antd/dist/antd.css";
-@import "react-toastify/dist/ReactToastify.css";
 
 :root {
   font-size: 10px;
 
   // dark-theme
   --dark-bg: #1f1f1f;
-  --dark-primary: #0c83d3;
+  --dark-primary: #157de4;
   --dark-secondary: #8395a7;
   --dark-light: #e6e2e2;
 
