--- a/src/components/Screensaver/Screensaver.module.scss
+++ b/src/components/Screensaver/Screensaver.module.scss
@@ -95,6 +95,7 @@
   border-radius: 5px;
   text-transform: uppercase;
   box-shadow: -1px 1px 3px #fffdfd41;
+  transition: all 0.3s ease-in-out;
 }
 
 .footer {
