--- a/src/components/Main/Main.module.scss
+++ b/src/components/Main/Main.module.scss
@@ -24,6 +24,7 @@
   font-size: 1.4rem;
   text-align: center;
   text-shadow: -1px 1px 3px var(--black);
+  transition: all 0.5s ease-in-out;
 }
 
 .editorWrapper {
