--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -26,7 +26,7 @@
 
   // toast colors
   --toastify-color-info: #064e96;
-  --toastify-color-success: #88960e;
+  --toastify-color-success: green;
   --toastify-color-error: #e34136;
 
   // vars
